Fix collapse animation

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -10,7 +10,11 @@
     --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2817, 77, 7, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 
 
-    .show, collapsing {
+    .collapsing {
+        height: auto;
+    }
+
+    .show, .collapsing {
         opacity: 1;
         background-color: white;
         width: 100%;
